fix: fixed alignments of info section

--- a/styles.css
+++ b/styles.css
@@ -181,12 +181,15 @@ header {
 h2, h4, h5, h6, p, li {
     color: black;
 }
+h2 {
+    padding-left: 20px;
+}
 .skills, .hobby, .contact {
     margin: 20px;
     padding: 30px;
     border-radius: 50px;
     width: 30vw;
-    background: #231fd6;
+    background: #1f74d6;
 }
 @media (max-width: 770px) {
     .education, .projectCard, .courses {
@@ -205,7 +208,7 @@ h2, h4, h5, h6, p, li {
       padding: 30px;
       border-radius: 50px;
       width: 80vw;
-      background: #231fd6;
+      background: #1f74d6;
   }
 }
 .container {
@@ -214,9 +217,10 @@ h2, h4, h5, h6, p, li {
 }
 .box {
     background: #31d7dd;
-    margin: 10px;
+    margin: 20px;
     padding: 10px;
     border:black;
     border-radius: 30px;
     width: fit-content;
+    height: fit-content;
 }
